<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSecondary">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:text="Temperature"
                android:textColor="?android:colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderTemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:stepSize="0.05"
                android:valueFrom="0.0"
                android:valueTo="1.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature"
                app:trackColorInactive="@color/gray2"
                app:trackHeight="15dp" />

            <TextView
                android:id="@+id/contentTemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/temperature_content"
                android:textColor="?android:colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/sliderTemperature"
                app:layout_constraintStart_toStartOf="@+id/sliderTemperature"
                app:layout_constraintTop_toBottomOf="@id/sliderTemperature" />

            <TextView
                android:id="@+id/contentTopK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:text="@string/topK_content"
                android:textColor="?android:colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderTopK" />

            <TextView
                android:id="@+id/topK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:text="TopK"
                android:textColor="?android:colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentTemperature" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderTopK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topK"
                app:trackColorInactive="@color/gray2"
                app:trackHeight="15dp" />

            <TextView
                android:id="@+id/topP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:text="TopP"
                android:textColor="?android:colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentTopK" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderTopP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:stepSize="0.05"
                android:valueFrom="0"
                android:valueTo="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topP"
                app:trackColorInactive="@color/gray2"
                app:trackHeight="15dp" />

            <TextView
                android:id="@+id/maxOutToken"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:text="Max Output Tokens"
                android:textColor="?android:colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentTopP" />

            <TextView
                android:id="@+id/contentTopP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:text="@string/topP_content"
                android:textColor="?android:colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderTopP" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderMaxOutTokken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:stepSize="1"
                android:valueFrom="500"
                android:valueTo="5000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxOutToken"
                app:trackColorInactive="@color/gray2"
                app:trackHeight="15dp" />

            <TextView
                android:id="@+id/stopSequences"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:text="Stop Sequences"
                android:textColor="?android:colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentMaxOutputTokens" />

            <TextView
                android:id="@+id/contentMaxOutputTokens"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:text="@string/max_output_token_content"
                android:textColor="?android:colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderMaxOutTokken" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                app:boxBackgroundColor="?background"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="?colorPrimary"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintTextColor="?colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/stopSequences"
                app:layout_constraintTop_toBottomOf="@+id/stopSequences">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stopEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Sequences"
                    android:maxLines="5"
                    android:textColor="?colorPrimary"
                    android:textColorHint="?colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/contentStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:text="@string/stop_sequences_content"
                android:textColor="?android:colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <TextView
                android:id="@+id/candidateCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:text="Candidate Count"
                android:textColor="?android:colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentStop" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderCandidateCOunt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/candidateCount"
                app:trackColorInactive="@color/gray2"
                app:trackHeight="15dp" />

            <TextView
                android:id="@+id/textCandidateCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:text="@string/candidate_count_content"
                android:textColor="?android:colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderCandidateCOunt" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="20dp"
                android:text="@string/accept_btn_content"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnAccept"
                app:layout_constraintEnd_toStartOf="@+id/btnAccept"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnAccept" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="?colorPrimary"
                android:src="@drawable/baseline_done_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCandidateCount"
                app:tint="?colorSecondary" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>